# DocHarbor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
app/routes/: api.py  jobs.py  ui.py
app/services/: brave_search_service.py  crawler_service.py  discovery_service.py  export_service.py  extraction_service.py  fetch_service.py  ingestion_service.py  inspection_service.py  llm_service.py  markdown_service.py  pdf_service.py  url_utils.py
app/static/: style.css
app/templates/: base.html  discovery.html  history.html  home.html  inspection.html  logs.html  pages.html  results.html  status.html
data/: app.db
tests/: test_crawler_service.py  test_discovery_service.py  test_export_service.py  test_extraction_service.py  test_inspection_service.py  test_job_tags.py  test_markdown_service.py  test_url_utils.py
