[project]
name = "scraper-v2"
version = "0.1.0"
description = "Documentation acquisition and export web app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "markdownify>=0.14.1",
    "openai>=1.68.2",
    "pydantic-settings>=2.8.1",
    "pypdf>=5.4.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["app*"]
